--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/madyanes/kelas.com-todolist/issues"
   },
-  "homepage": "https://github.com/madyanes/kelas.com-todolist#readme"
+  "homepage": "https://github.com/madyanes/kelas.com-todolist#readme",
+  "dependencies": {
+    "mysql2": "^3.6.1"
+  }
 }
