--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/madyanes/kelas.com-todolist#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mysql2": "^3.6.1"
   }
 }
